--- a/source/static/stylesheets/pages/landing.css
+++ b/source/static/stylesheets/pages/landing.css
@@ -2,7 +2,7 @@ body {
     background: var(--body-background-color) center center no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    background-image: url("../../images/background.jpg");
+    background-image: url("/source/static/images/background.jpg");
 }
 
 #site-header {
